alpm-types/src/version/snapshots/base::invalid_pkgrel@case_2.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid package release
 | 
 | 1.
 |   ^ expected single '.' followed by positive decimal integer
